vlib/v/checker/tests/decl_underscore.out
vlib/v/checker/tests/decl_underscore.v:2:2: error: variable names cannot start with `__`
    1 | fn main() {
    2 |     __abc := 1
      |     ~~~~~
    3 | }
